# bot

./: .clang-format  .env  .env.example  .gitignore  CMakeLists.txt  Deps.cmake  MIGRATION.md  cmake.toml  docker-compose.yml  example.config.json  reverse_calc  reverse_calc.cpp
cmake/: CPM.cmake  PreventInSourceBuilds.cmake
include/: beatmap_downloader.h  bot.h  cache.h  database.h  debug_settings.h  error_messages.h  http_server.h  message_builder.h  migration.h  osu.h  osu_parser.h  osu_tools.h  pp_helper.h  requests.h  utils.h
include/commands/: admin_set_command.h  admin_unset_command.h  audio_command.h  bg_command.h  command.h  command_router.h  compare_command.h  lb_command.h  link_command.h  map_command.h  osc_command.h  profile_command.h  rs_command.h  settings_command.h  sim_command.h  top_command.h  users_command.h
include/handlers/: button_handler.h  member_handler.h  message_handler.h  ready_handler.h  slash_command_handler.h
include/services/: beatmap_cache_service.h  beatmap_extract_service.h  beatmap_performance_service.h  beatmap_resolver_service.h  chat_context_service.h  command_params_service.h  embed_template_service.h  leaderboard_service.h  rosu_pp_client.h  (+10 more)
lib/osu-pp-calculator/: .gitignore  CMakeLists.txt  IMPLEMENTATION_STATUS.md  README.md
lib/osu-pp-calculator/cmake/: osu-pp-calculator-config.cmake.in
lib/osu-pp-calculator/include/osu-pp/: beatmap_parser.h  calculator.h  difficulty_calculator.h  difficulty_object.h  difficulty_utils.h  evaluators.h  performance_calculator.h  rating_calculator.h  slider_path.h  strain_skill.h  types.h
migrations/: 001_init_schema.sql  002_osz_storage.sql  003_pending_button_removals.sql  004_add_removal_type.sql  004_beatmap_cache_and_files.sql  005_message_crawler.sql  007_message_crawler_extended.sql  007_update_stopwords.sql  009_download_log.sql  010_discord_users_cache.sql  011_discord_users_avatar.sql  012_additional_stopwords.sql  012_guild_info.sql  013_phrase_stats.sql  014_discord_channels.sql  016_phrase_stats_enhanced.sql  017_incremental_stats.sql  018_embed_preset_templates.sql  018_user_settings.sql  019_namespace_preset_templates.sql  021_json_embed_templates.sql  022_migrate_loop_templates.sql  023_oauth_linked_flag.sql  023_user_custom_templates.sql  025_template_audit_log.sql  026_user_play_history.sql  026_user_track_library.sql  028_replay_history.sql  028_replay_history_failed.sql  030_replay_share.sql  031_replay_beatmap_set_id.sql  032_render_jobs.sql  033_user_skin.sql
proto/: pp.proto
scripts/: lemmatizer.service  lemmatizer.service.example  lemmatizer_service.py  setup_lemmatizer.sh
src/: beatmap_downloader.cpp  bot.cpp  cache.cpp  database.cpp  http_server.cpp  main.cpp  message_builder.cpp  migration.cpp  osu.cpp  requests.cpp  utils.cpp
static/: music.html  phrasestats.html  presets.html  wordstats.html
(+41 files in other folders)
